# portfolio-v6

./: .editorconfig  .gitignore  .prettierrc  COMPILATION_PROCESS.md  README.md  WHAT_IT_DOES.md  example.env  imake  make-prod  ortfodb.yaml  ortfomk.yaml  package.json  pnpm-lock.yaml  portfolio+ortfo.code-workspace  rollup.config.js  tsconfig.json  works-to-add.txt
assets/: global.css  manifest.json  site.webmanifest  spinner-animation.css
database/: .lastbuild.json  .portfoliodb.yaml  aggregate-language-times.py  collections.yaml  database.json  duolingo-japanese.json  get-duolingo-japanese-stats.py  sites.json  sites.yaml  tags.json  tags.yaml  technologies.yaml  wakatime-aggregated.json  works.json
hydrator/: database.go  go.mod  go.sum  hydrate.go  layout.go  main.go  new_hydration.md  paths.go  portfoliodb_structs.go  sprig_addons.go  tags.go  tags_and_techs.go  technologies.go  template.go  template_struct.go  translation.go  utils.go  watchers.go
i18n/: clean.go  en-unused-messages.yaml  en-unused-msgids.yaml  en.po  extract.js  fr-unused-messages.yaml  fr-unused-msgids.yaml  fr.po  unused-msgids.yaml
merged_po_file_cleaner/: clean_merged_po_file.go  merged_po_file_cleaner
messages/: en.json  fr.json  fr.po  fr_FR.mo  fr_FR.po
src/: .error-layout.pug  .gallery.pug  .layout.pug  .ortfoignore  404.pug  500.pug  _tag.pug  _work-alias.pug  _work.pug  about.pug  cards.styl  client.js  contact.pug  error-layout.pug  gallery.pug  index.pug  layout.pug  made-with.pug  mixins.styl  music.pug  server.js  style.styl  (+3 more)
translator/: pyproject.toml  translate.py
(+62 files in other folders)
