[tool.poetry]
name = "translator"
version = "0.1.0"
description = ""
authors = ["Ewen Le Bihan <hey@ewen.works>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
black = "^20.8b1"
rope = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
